--- a/Source/Web/Client/index.html
+++ b/Source/Web/Client/index.html
@@ -21,15 +21,18 @@
 			<button id="password-button" type="submit">Submit</button>
 		</form>
 
-		<table id="table">
-            <tr>
-                <th>Key</th>
-                <th>Users</th>
-                <th>Assets</th>
-            </tr>
-            <tr>
-                <td><button id="new-entry">+</button></td>
-            </tr>
+		<table>
+			<tbody id="table">
+				<tr>
+					<th>Key</th>
+					<th>Users</th>
+					<th>Assets</th>
+				</tr>
+				<tr>
+					<td><button id="new-entry">+</button></td>
+				</tr>
+			</tbody>
+
         </table>
 	</main>
 
