--- a/Source/Web/Client/index.html
+++ b/Source/Web/Client/index.html
@@ -27,6 +27,7 @@
 					<th>Key</th>
 					<th>Users</th>
 					<th>Assets</th>
+					<th>Admin?</th>
 				</tr>
 				<tr>
 					<td><button id="new-entry">+</button></td>
